# peridot-wasm-scripting-test

./: .gitignore  Cargo.toml  peridot.toml
assets/shaders/: plain.csh
script/: .gitignore  Cargo.toml
script/src/: bindings.rs  lib.rs
script/wit/: world.wit
src/: lib.rs
